<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="isListVisible"
            type="Boolean" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="org.mascota.ui.view.calendar.CalendarActivity">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:textColor="@color/maco_orange"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/soeun" />

        <TextView
            android:id="@+id/tv_s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/s"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_name"
            app:layout_constraintStart_toEndOf="@+id/tv_name" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            app:layout_constraintStart_toEndOf="@+id/tv_s"
            app:layout_constraintTop_toTopOf="@+id/tv_s">

            <TextView
                android:id="@+id/tv_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/year2021" />

            <View
                android:id="@+id/line1"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="2dp"
                android:background="@color/black"
                app:layout_constraintEnd_toEndOf="@+id/tv_year"
                app:layout_constraintStart_toStartOf="@+id/tv_year"
                app:layout_constraintTop_toBottomOf="@+id/tv_year" />

            <ImageButton
                android:id="@+id/ib_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:background="@drawable/selector_arrow"
                app:layout_constraintBottom_toBottomOf="@+id/tv_year"
                app:layout_constraintStart_toEndOf="@+id/tv_year"
                app:layout_constraintTop_toTopOf="@+id/tv_year" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageButton
            android:id="@+id/ib_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:background="@drawable/ic_home"
            app:layout_constraintBottom_toBottomOf="@+id/cl_year"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/cl_year" />

        <TextView
            android:id="@+id/tv_today"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:text="@string/today"
            android:textColor="@color/maco_orange"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/ib_home"
            app:layout_constraintEnd_toStartOf="@+id/ib_home"
            app:layout_constraintTop_toTopOf="@+id/ib_home" />

        <View
            android:id="@+id/line2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="29dp"
            android:background="@color/maco_light_gray"
            app:layout_constraintTop_toBottomOf="@+id/cl_year" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_year"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@drawable/rectangle_fill_ivory_8"
            android:elevation="3dp"
            android:visibility="@{isListVisible? View.VISIBLE : View.GONE}"
            app:layout_constraintEnd_toEndOf="@+id/cl_year"
            app:layout_constraintStart_toStartOf="@+id/cl_year"
            app:layout_constraintTop_toBottomOf="@+id/cl_year"
            tools:itemCount="3"
            tools:listitem="@layout/item_year" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>